fix: upload.html
fix form action path

--- a/src/static/upload.html
+++ b/src/static/upload.html
@@ -5,11 +5,7 @@
     <title>文件上传</title>
   </head>
   <body>
-    <form
-      action="http://localhost:1235/fleek/storage"
-      method="post"
-      enctype="multipart/form-data"
-    >
+    <form action="/fleek/storage" method="post" enctype="multipart/form-data">
       <div>
         <input type="file" name="file" />
       </div>
