--- a/src/static/upload.html
+++ b/src/static/upload.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>文件上传</title>
+    <title>File Upload</title>
   </head>
   <body>
     <form action="/fleek/storage" method="post" enctype="multipart/form-data">
@@ -10,7 +10,7 @@
         <input type="file" name="file" />
       </div>
       <div>
-        <input type="submit" value="提交" />
+        <input type="submit" value="Upload" />
       </div>
     </form>
   </body>
